# PokeBots

./: .gitignore  README.md  notify.py
rng-bot/: README.md  _cleanup.py  blissey_legendary_tutorial.txt  blissey_rng_overview.txt  blissey_static_tutorial.txt  blissey_transcript.txt  calibration.py  debug_boot.py  debug_nature.py  diag_boot.py  diagnose_nature.py  filter_advance.py  find_advance.py  find_target.py  index.html  nav_trainer_card.py  pico.py  pokemon_data.py  read_tid_debug.py  record_phase3.py  rng_bot.py  rng_engine.py  scan_card.py  screen_reader.py  seed_data.py  test_3phase.py  test_boot.py  test_pick.py  test_rng.py  tid_sid.py  web_control.py
shared/: notify.py  pixel_tools.py
shiny-bot/: OPTIMIZATIONS.md  README.md  check_border.py  hunt_loop.py  pico.py  record_sequence.py  run_sequence.py  run_sequence.sh  web_control.py
shiny-bot/pico-fw/src/: main.c  tusb_config.h
sid-finder/: index.html  pokemon_data.py  rng_math.py  sid_finder.py
uart-bot/: README.md  check_border.py  hunt_loop.py  pico.py  pixel_tools.py  run_sequence.py  web_control.py
uart-bot/pico-fw/: CMakeLists.txt
uart-bot/pico-fw/src/: main.c  tusb_config.h  usb_descriptors.c
